@@ -1,4 +1,7 @@
-Version 1alpha2 - internally released TODO
+Version 1alpha3 - released TODO
+cmb	made sorting and filtering case insensitive (but not yet locale aware)
+
+Version 1alpha2 - internally released 2012-06-13
 cmb	changed: states have classes instead of fixed colors (inspired by svasti)
 cmb	changed: default column widths and font-size larger (suggested by svasti)
 cmb	added possibility to vote (suggested by svasti)
